--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,4 @@
-@import 'primeicons/primeicons.css';
-@import 'primeflex/primeflex.scss';
+@import 'variables.scss';
 
 html {
   font-size: 12px;
@@ -57,6 +56,6 @@ html {
   .p-error {
     position: absolute;
     left: 0;
-    bottom: -1.3rem
+    bottom: -1.3rem;
   }
 }
